--- a/docs/lectures/260-2021-12-02-memory-II.Rmd
+++ b/docs/lectures/260-2021-12-02-memory-II.Rmd
@@ -180,31 +180,31 @@ knitr::include_graphics("img/hippocampus-seahorse.jpg")
 - Formation, storage, consolidation of long-term episodic or declarative memories
 - Stores info for later transfer to cortex
 
+## Hippocampus in non-human animals
+
+- Similar architecture to humans
+    - More known about mechanisms for *spatial* than *non-spatial* memory
++ [Place cells](https://en.wikipedia.org/wiki/Place_cell)
++ [Grid cells](http://www.scholarpedia.org/article/Grid_cells)
++ [Head-direction cells](http://www.scholarpedia.org/article/Head_direction_cells)
+
 ---
 
-```{r, fig.cap="[[@Dickerson2010-qh]](http://dx.doi.org/10.1038/npp.2009.126)"}
+```{r, fig.cap="[[@Dickerson2010-qh]](http://dx.doi.org/10.1038/npp.2009.126)", out.width="600px"}
 knitr::include_graphics("https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fnpp.2009.126/MediaObjects/41386_2010_Article_BFnpp2009126_Fig2_HTML.jpg?as=webp")
 ```
 
 ## Cortical areas activated or deactivated during memory encoding
 
-```{r, fig.cap="[[@Dickerson2010-qh]](http://dx.doi.org/10.1038/npp.2009.126)", out.height="450px"}
+```{r, fig.cap="[[@Dickerson2010-qh]](http://dx.doi.org/10.1038/npp.2009.126)", out.width="600px"}
 knitr::include_graphics("https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fnpp.2009.126/MediaObjects/41386_2010_Article_BFnpp2009126_Fig5_HTML.jpg?as=webp")
 ```
 
 ## Cortical areas deactivated in non-memory cognitive tasks but activated during memory retrieval
 
-```{r, fig.cap="[[@Dickerson2010-qh]](http://dx.doi.org/10.1038/npp.2009.126)", out.height="450px"}
+```{r, fig.cap="[[@Dickerson2010-qh]](http://dx.doi.org/10.1038/npp.2009.126)", out.width="600px"}
 knitr::include_graphics("https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fnpp.2009.126/MediaObjects/41386_2010_Article_BFnpp2009126_Fig6_HTML.jpg?as=webp")
 ```
-
-## Hippocampus in non-human animals
-
-- Similar architecture to humans
-    - More known about mechnanisms for *spatial* than *non-spatial* memory
-+ [Place cells](https://en.wikipedia.org/wiki/Place_cell)
-+ [Grid cells](http://www.scholarpedia.org/article/Grid_cells)
-+ [Head-direction cells](http://www.scholarpedia.org/article/Head_direction_cells)
 
 ## Memory systems in the brain
 
@@ -215,3 +215,17 @@ knitr::include_graphics("https://media.springernature.com/full/springer-static/i
 </div>
 
 ## References {.smaller}
+
+<!-- Scrolling final reference page -->
+<!-- http://stackoverflow.com/q/38260799 -->
+<style>
+slides > slide { overflow: scroll; }
+slides > slide:not(.nobackground):before {
+  background: none;
+  }
+slides > slide:not(.nobackground):after {
+  content: '';
+  background: none;
+  }
+}
+</style>
